syntax = "proto3";
package zukte;

message ApplicationUser {
  string name = 1;
  string id = 2;
  string picture = 3;
}
